# rust-guide

./: Cargo.toml  LICENSE-APACHE  README.md  book.toml
assets/: 收集.txt
examples/concurrency/threads/: Cargo.toml
examples/concurrency/threads/examples/: crossbeam-complex.rs  crossbeam-spawn.rs  global-mut-state.rs  threadpool-fractal.rs
examples/concurrency/threads/src/: main.rs
examples/development-tools/build-tools/cc-bundled-static/: Cargo.toml
examples/development-tools/build-tools/cc-bundled-static/src/: main.rs
examples/encoding/strings/: Cargo.toml
examples/encoding/strings/examples/: hex.rs  percent-encode.rs
examples/encoding/strings/src/: main.rs
examples/science/mathematics/linear-algebra/: Cargo.toml
examples/science/mathematics/linear-algebra/examples/: deserialize-matrix.rs  vector-comparison.rs
examples/web/clients/download/: Cargo.toml
examples/web/clients/download/examples/: partial.rs  post-file.rs
examples/web/clients/requests/: Cargo.toml
examples/web/clients/requests/examples/: header.rs
examples/web/scraping/: Cargo.toml
examples/web/scraping/examples/: broken.rs  extract-links.rs
src/: 1-preface.md  10-data-structures.md  11-database.md  12-datetime.md  13-development-tools.md  14-encoding.md  15-errors.md  16-file.md  17-hardware.md  18-mem.md  19-net.md  2-advise.md  20-os.md  21-science.md  22-text.md  23-web.md  24-installing-from-source.md  25-rust-build-advanced.md  26-rust-fuzz.md  27-mdbook.md  3-env.md  4-cargo.md  5-algorithms.md  6-cli.md  7-compression.md  8-concurrency.md  9-cryptography.md  SUMMARY.md  about.md  algorithms.md  cli.md  compression.md  concurrency.md  cryptography.md  data_structures.md  database.md  datetime.md  development_tools.md  encoding.md  env-tools.md  (+15 more)
src/1-preface/: 1.1-advantage.md  1.2-why-what.md  1.3-conclusion.md
src/10-data-structures/: 10.1-bitfield.md
src/11-database/: 11.1-driver.md  11.2-orm.md
src/12-datetime/: 12.1-duration.md  12.2-parse.md  12.3-datetime-crates.md
src/13-development-tools/: 13.1-debugging.md  13.2-versioning.md  13.3-build-tools.md
src/14-encoding/: 14.1-strings.md  14.2-csv.md  14.3-complex.md
src/15-errors/: 15.1-handle.md  15.2-errors-crates.md
src/16-file/: 16.1-read-write.md  16.2-dir.md  16.3-file-crates.md
src/17-hardware/: 17.1-processor.md  17.2-hardware-crates.md
src/18-mem/: 18.1-global-static.md  18.2-mem-crates.md
src/19-net/: 19.1-server.md
src/2-advise/: 2.1-who.md  2.2-how.md  2.3-conclusion.md
src/20-os/: 20.1-external.md  20.2-os-crates.md
src/21-science/: 21.1-mathematics.md
src/22-text/: 22.1-regex.md  22.2-string-parsing.md  22.3-text-crates.md
src/23-web/: 23.1-scraping.md  23.2-url.md  23.3-mime.md  23.4-email.md  23.5-clients.md
theme/: index-book.hbs  index.hbs
(+471 files in other folders)
