[package]
name = "threads"
version = "0.1.0"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
error-chain = "0.12.4"
image = "0.23.12"
lazy_static = "1.4.0"
num = "0.3.1"
num_cpus = "1.13.0"
ring = "0.16.19"
threadpool = "1.8.1"
walkdir = "2.3.1"
