[package]
name = "strings"
version = "0.1.0"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
data-encoding = "2.3.1"
error-chain = "0.12.4"
percent-encoding = "2.1.0"
url = "2.2.0"
