[package]
name = "scraping"
version = "0.1.0"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
lazy_static = "1.4.0"
regex = "1.4.2"
reqwest = "0.10.10"
select = "0.5.0"
tokio = "0.3.6"
url = "2.2.0"
