[package]
name = "cc-bundled-static"
version = "0.1.0"
authors = ["zzy <linshi@budshome.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.66"

[dependencies]
error-chain = "0.12.4"


