[package]
name = "linear-algebra"
version = "0.1.0"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.4.0"
nalgebra = "0.23.2"
ndarray = "0.14.0"
serde = "1.0.118"
serde_json = "1.0.60"
