[package]
name = "download"
version = "0.1.0"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = "0.10.10"
tempdir = "0.3.7"
tempfile = "3.1.0"
tokio = "0.3.6"
